Allow configuring idle timeout and thread settings
Broker and router settings related to AMQP heart beat and threads used
to handle connections can now be tuned in the standard infra config
